--- a/front/bef/package.json
+++ b/front/bef/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "bootstrap": "^5.3.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.13.0"
+    "react-router-dom": "^6.13.0",
+    "simplycountdown.js": "^1.7.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
