--- a/front/bef/package.json
+++ b/front/bef/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-iframe": "^1.8.5",
     "react-router-dom": "^6.13.0",
     "simplycountdown.js": "^1.7.0"
   },
