--- a/front/bef/package.json
+++ b/front/bef/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.0",
+    "classnames": "^2.3.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "react": "^18.2.0",
